# fcitx5-lotus

./: .all-contributorsrc  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.en.md  INSTALL.md  Messages.sh  README.en.md  README.md  lotus-version.h.in  org.fcitx.Fcitx5.Addon.Lotus.metainfo.xml.in  org.fcitx.Fcitx5.Addon.Vmk.metainfo.xml.in  translate.sh  update_translate.sh
.github/workflows/: build.yml  packaging-dev.yml  packaging-release.yml  ubuntu-dev-build.yml  ubuntu-release-build.yml
addon/src/: vmk.cpp  vmk.h  vmkonfig.h
bamboo/: .gitignore
data/: .gitignore  CMakeLists.txt
data/dictionaries/: LICENSE.vietnamese.cm.dict
data/emoji/: COPYING.emojione  EMOJI_GUIDE.md  emoji_data.h  emojione.json  generate_emoji_header.py
keymap-editor/: editor.cpp
misc/: 99-vmk.rules  CMakeLists.txt  fcitx5-vmk-server@.service  user-vmk.conf
packaging/: pubkey.gpg
packaging/debian/: changelog  control  postinst  rules
packaging/rpm/fedora/: fcitx5-lotus.spec
packaging/rpm/opensuse/: fcitx5-lotus.spec
po/: .gitignore  CMakeLists.txt  LINGUAS  fcitx5-lotus.pot  fcitx5-vmk.pot  vi.po
server/: .gitignore  CMakeLists.txt  lotus-server.cpp  vmk-server.cpp
src/: .gitignore  CMakeLists.txt  ack-apps.h  emoji.h  lotus-config.h  lotus-engine.cpp  lotus-engine.h  lotus-monitor.cpp  lotus-state.cpp  lotus.cpp  lotus.h  vmk-config.h  vmk.conf.in  vmk.cpp  vmk.h
